Added navigation to second activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,6 @@
 				<action android:name="android.intent.action.MAIN"/>
 			</intent-filter>
 		</activity>
+		<activity android:name=".ui.detail.EditOrderActivity"/>
 	</application>
 </manifest>
