--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,17 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
-		<activity android:name=".ui.viewer.ViewerActivity"
+		<activity
+			android:name=".ui.viewer.ViewerActivity"
 			android:screenOrientation="portrait">
 			<intent-filter>
 				<category android:name="android.intent.category.LAUNCHER"/>
 				<action android:name="android.intent.action.MAIN"/>
 			</intent-filter>
 		</activity>
-		<activity android:name=".ui.detail.EditOrderActivity"/>
+		<activity
+			android:name=".ui.detail.EditOrderActivity"
+			android:screenOrientation="portrait"
+			android:windowSoftInputMode="stateHidden"/>
 	</application>
 </manifest>
