Added DB and save orders

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 
     implementation 'ru.terrakok.cicerone:cicerone:3.0.0'
 
+    implementation 'com.pushtorefresh.storio3:sqlite:3.0.0'
+
     implementation libraries.butterKnife
     annotationProcessor libraries.butterKnifeCompiler
 
