--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,12 @@
 		android:theme="@style/MyAppTheme">
 
 		<activity
-			android:name=".ui.viewer.ViewerActivity"
+			android:name=".ui.hab.HabActivity"
 			android:screenOrientation="portrait">
 			<intent-filter>
 				<category android:name="android.intent.category.LAUNCHER"/>
 				<action android:name="android.intent.action.MAIN"/>
 			</intent-filter>
 		</activity>
-		<activity
-			android:name=".ui.detail.EditOrderActivity"
-			android:screenOrientation="portrait"
-			android:windowSoftInputMode="stateHidden"/>
 	</application>
 </manifest>
