--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest package="home.work.pcconfig"
 		  xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+	<uses-permission android:name="android.permission.SEND_SMS" />
+
 	<application
 		android:name=".ui.global.App"
 		android:allowBackup="true"
