--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation libraries.daggerAndroidSupport
 
     implementation 'ru.terrakok.cicerone:cicerone:3.0.0'
+    implementation 'ru.terrakok.cicerone:cicerone:3.0.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'com.pushtorefresh.storio3:sqlite:3.0.0'
 
